--- a/.github/workflows/groovy-joint-workflow.yml
+++ b/.github/workflows/groovy-joint-workflow.yml
@@ -50,7 +50,7 @@ jobs:
         id: groovy-version
         run: |
           cd groovy
-          GROOVY_VERSION=$(cat gradle.properties | grep groovyVersion | cut -d\= -f2 |  tr -d '[:space:]')
+          GROOVY_VERSION=$(cat gradle.properties | grep 'groovy.version' | cut -d\= -f2 |  tr -d '[:space:]')
           echo "Groovy version $GROOVY_VERSION stored"
           echo "value=$GROOVY_VERSION" >> $GITHUB_OUTPUT
       - name: "🐘 Configure Gradle Plugins (Step 1/3)"
@@ -140,5 +140,5 @@ jobs:
           DEVELOCITY_BUILD_CACHE_NODE_KEY: ${{ secrets.GRADLE_ENTERPRISE_BUILD_CACHE_NODE_KEY }}
         run: >
           ./gradlew build
-          -PgroovyVersion=${{needs.build_groovy.outputs.groovyVersion}}
+          '-Pgroovy.version=${{needs.build_groovy.outputs.groovyVersion}}'
           -x groovydoc
