--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ if (jointBuildGroovyJarProperty) {
         throw new GradleException("The groovy.jar system property points to ${jointBuildGroovyJar.absolutePath} which does not exist.")
     }
 } else {
-    groovyDependency = dependencies.create("org.apache.groovy:groovy:${groovyVersion}")
+    groovyDependency = dependencies.create("org.apache.groovy:groovy:${project['groovy.version']}")
 }
 
 if (isReleaseVersion) {
@@ -96,7 +96,7 @@ allprojects {
         configurations.configureEach {
             resolutionStrategy.eachDependency { DependencyResolveDetails details ->
                 if (details.requested.group == 'org.codehaus.groovy' && details.requested.name != 'groovy-bom') {
-                    details.useTarget(group: 'org.apache.groovy', name: details.requested.name, version: groovyVersion)
+                    details.useTarget(group: 'org.apache.groovy', name: details.requested.name, version: project.findProperty('groovy.version'))
                 }
             }
         }
@@ -118,7 +118,7 @@ allprojects {
                 eachDependency { DependencyResolveDetails details ->
                     //specifying a fixed version for all libraries with 'org.gradle' group
                     if (details.requested.group == 'org.apache.groovy') {
-                        details.useVersion(groovyVersion)
+                        details.useVersion(project['groovy.version'])
                     }
                     if (details.requested.group == "org.spockframework") {
                         details.useVersion(project['spock.version'])
@@ -185,12 +185,6 @@ subprojects { subproject ->
             'grails-plugin-converters': 'converters'
     ]
 
-    if (isPlugin) {
-        group = 'org.grails.plugins'
-    } else {
-        group = 'org.grails'
-    }
-
     if(isExample) {
         // Test projects will often include dependencies from grails-core, this file will ensure any dependencies included
         // will be substituted with projects in this repository instead of pulling upstream
@@ -206,6 +200,13 @@ subprojects { subproject ->
                 }
             }
         }
+        return
+    }
+
+    if (isPlugin) {
+        group = 'org.grails.plugins'
+    } else {
+        group = 'org.grails'
     }
 
     ext.pomInfo = {
@@ -258,7 +259,7 @@ subprojects { subproject ->
         apply plugin: 'project-report'
     }
 
-    if (!isTestSuite && !isExample) {
+    if (!isTestSuite) {
 
         apply plugin: 'maven-publish'
         apply plugin: 'signing'
@@ -346,7 +347,7 @@ subprojects { subproject ->
         }
     }
 
-    if (subproject.name in ['grails-dependencies', 'grails-bom'] || isExample) return
+    if (subproject.name in ['grails-dependencies', 'grails-bom']) return
 
     dependencies {
         implementation platform(project(':grails-bom'))
