--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,6 @@ gradleNexusPublishPluginVersion=2.0.0
 gradleExtraConfigurationsPluginVersion=10.0.1
 gradleLicensePluginVersion=0.16.1
 gradleToolingApiVersion=8.12
-groovyVersion=4.0.24
 joptSimpleVersion=5.0.4
 plexusComponentApiVersion=1.0-alpha-33
 plexusSecDispatcherVersion=1.4
@@ -21,6 +20,11 @@ org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.daemon=true
 org.gradle.jvmargs=-Dfile.encoding=UTF-8 -Xmx1536M -XX:MaxMetaspaceSize=1024M
+
+# libraries only specific to test apps, these should not be exposed
+micronautVersion=4.6.5
+micronautSerdeJacksonVersion=2.11.0
+springSecurityCoreVersion=7.0.0-SNAPSHOT
 
 # Set when we are temporarily releasing, should be false unless we want to prevent
 # snapshot or documentation publishes.
