--- a/grails-test-examples/app1/build.gradle
+++ b/grails-test-examples/app1/build.gradle
@@ -4,8 +4,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "org.grails:grails-gradle-plugin:$grailsGradlePluginVersion"
-        classpath "com.bertramlabs.plugins:asset-pipeline-gradle:$assetPipelineVersion"
+        classpath "org.grails:grails-gradle-plugin:${project['grails-gradle-plugin.version']}"
+        classpath "com.bertramlabs.plugins:asset-pipeline-gradle:${project['asset-pipeline-gradle.version']}"
     }
 }
 
@@ -22,14 +22,12 @@ assets {
     minifyCss = true
 }
 
-dependencyManagement {
-    imports {
-        mavenBom "org.grails:grails-bom:$grailsVersion"
-    }
-    applyMavenExclusions false
-}
+apply plugin: 'java'
+compileJava.options.release = 17
 
 dependencies {
+    implementation platform(project(':grails-bom'))
+
     implementation "org.springframework.boot:spring-boot-starter-logging"
     implementation "org.springframework.boot:spring-boot-starter-actuator"
     implementation "org.springframework.boot:spring-boot-autoconfigure"
@@ -53,12 +51,12 @@ dependencies {
     testImplementation "io.micronaut:micronaut-http-client:$micronautVersion"
     testImplementation "io.micronaut.serde:micronaut-serde-jackson:$micronautSerdeJacksonVersion"
 
-    implementation project(':loadfirst')
-    implementation project(':loadsecond')
-    implementation project(':loadafter')
-}
+    implementation project(':grails-test-examples-plugins-loadfirst')
+    implementation project(':grails-test-examples-plugins-loadsecond')
+    implementation project(':grails-test-examples-plugins-loadafter')
 
-apply from: "${rootProject.projectDir}/gradle/geb.gradle"
+    integrationTestImplementation testFixtures("org.grails.plugins:geb")
+}
 
 tasks.withType(org.gradle.api.tasks.JavaExec) {
     systemProperty('REPLACE_ME', 'test')
@@ -73,3 +71,5 @@ test {
 //compileTestGroovy.groovyOptions.forkOptions.jvmArgs = ['-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005']
 //compileGroovy.groovyOptions.fork = true
 //compileGroovy.groovyOptions.forkOptions.jvmArgs = ['-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005']
+
+apply from: rootProject.file('gradle/functional-test-project.gradle')
