--- a/grails-test-examples/app3/build.gradle
+++ b/grails-test-examples/app3/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         maven { url "https://repo.grails.org/grails/core" }
     }
     dependencies {
-        classpath "org.grails:grails-gradle-plugin:$grailsGradlePluginVersion"
+        classpath "org.grails:grails-gradle-plugin:${project['grails-gradle-plugin.version']}"
     }
 }
 
@@ -13,14 +13,12 @@ group "app3"
 apply plugin: "org.grails.grails-web"
 apply plugin: "org.grails.grails-gsp"
 
-dependencyManagement {
-    imports {
-        mavenBom "org.grails:grails-bom:$grailsVersion"
-    }
-    applyMavenExclusions false
-}
+apply plugin: 'java'
+compileJava.options.release = 17
 
 dependencies {
+    implementation platform(project(':grails-bom'))
+
     implementation "org.springframework.boot:spring-boot-starter-logging"
     implementation "org.springframework.boot:spring-boot-starter-actuator"
     implementation "org.springframework.boot:spring-boot-autoconfigure"
@@ -38,12 +36,14 @@ dependencies {
     testImplementation "org.grails:grails-gorm-testing-support"
 
     console "org.grails:grails-console"
-}
 
-apply from: "${rootProject.projectDir}/gradle/geb.gradle"
+    integrationTestImplementation testFixtures("org.grails.plugins:geb")
+}
 
 grails {
     plugins {
-        implementation project(':loadafter')
+        implementation project(':grails-test-examples-plugins-loadafter')
     }
 }
+
+apply from: rootProject.file('gradle/functional-test-project.gradle')
