--- a/grails-test-examples/demo33/build.gradle
+++ b/grails-test-examples/demo33/build.gradle
@@ -3,8 +3,8 @@ buildscript {
         maven { url "https://repo.grails.org/grails/core" }
     }
     dependencies {
-        classpath "org.grails:grails-gradle-plugin:$grailsGradlePluginVersion"
-        classpath "org.grails.plugins:views-gradle:$viewsVersion"
+        classpath "org.grails:grails-gradle-plugin:${project['grails-gradle-plugin.version']}"
+        classpath "org.grails.plugins:views-gradle:${project['plugins-views-gradle.version']}"
     }
 }
 
@@ -14,6 +14,9 @@ version '0.0.1'
 apply plugin:"org.grails.grails-web"
 apply plugin:"org.grails.plugins.views-json"
 apply plugin: "org.grails.grails-gsp"
+
+apply plugin: 'java'
+compileJava.options.release = 17
 
 dependencies {
     implementation platform("org.grails:grails-bom:$grailsVersion")
@@ -71,5 +74,7 @@ tasks.withType(GroovyCompile) {
 tasks.withType(Jar).configureEach {
     duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
+
+apply from: rootProject.file('gradle/functional-test-project.gradle')
 
 compileTestGroovy.dependsOn(compileGsonViews)
