--- a/grails-test-examples/issue-11767/build.gradle
+++ b/grails-test-examples/issue-11767/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         maven { url = 'https://repo.grails.org/grails/core' }
     }
     dependencies {
-        classpath "org.grails:grails-gradle-plugin:$grailsGradlePluginVersion"
+        classpath "org.grails:grails-gradle-plugin:${project['grails-gradle-plugin.version']}"
     }
 }
 
@@ -13,17 +13,11 @@ apply plugin: 'application'
 apply plugin: 'groovy'
 apply plugin: 'org.grails.grails-web'
 
-repositories {
-    mavenCentral()
-    maven { url = 'https://repo.grails.org/grails/core' }
-}
-
-dependencyManagement {
-    imports { mavenBom "org.grails:grails-bom:$grailsVersion" }
-    applyMavenExclusions false
-}
+apply plugin: 'java'
+compileJava.options.release = 17
 
 dependencies {
+    implementation platform(project(':grails-bom'))
 
     implementation project(':issue-11767-plugin')
 
@@ -45,3 +39,5 @@ dependencies {
 application {
     mainClass = 'issue11767.Application'
 }
+
+apply from: rootProject.file('gradle/functional-test-project.gradle')
