--- a/grails-test-examples/plugins/issue-11767-plugin/build.gradle
+++ b/grails-test-examples/plugins/issue-11767-plugin/build.gradle
@@ -3,29 +3,25 @@ buildscript {
         maven { url = 'https://repo.grails.org/grails/core' }
     }
     dependencies {
-        classpath "org.grails:grails-gradle-plugin:$grailsGradlePluginVersion"
+        classpath "org.grails:grails-gradle-plugin:${project['grails-gradle-plugin.version']}"
     }
 }
+
+version "0.1-SNAPSHOT"
+group 'issue11767.plugin'
 
 apply plugin: 'groovy'
 apply plugin: 'org.grails.grails-plugin'
 
-group = 'issue11767.plugin'
-
-repositories {
-    mavenCentral()
-    maven { url = 'https://repo.grails.org/grails/core' }
-}
-
-dependencyManagement {
-    imports {
-        mavenBom "org.grails:grails-bom:$grailsVersion"
-    }
-    applyMavenExclusions false
-}
+apply plugin: 'java'
+compileJava.options.release = 17
 
 dependencies {
+    implementation platform(project(':grails-bom'))
+
     annotationProcessor 'io.micronaut:micronaut-inject-java'
     implementation 'org.grails:grails-core'
     compileOnly 'io.micronaut:micronaut-inject-groovy'
 }
+
+apply from: rootProject.file('gradle/functional-test-project.gradle')
