--- a/grails-test-examples/plugins/issue11005/build.gradle
+++ b/grails-test-examples/plugins/issue11005/build.gradle
@@ -3,26 +3,23 @@ buildscript {
         maven { url "https://repo.grails.org/grails/core" }
     }
     dependencies {
-        classpath "org.grails:grails-gradle-plugin:$grailsGradlePluginVersion"
+        classpath "org.grails:grails-gradle-plugin:${project['grails-gradle-plugin.version']}"
     }
 }
 
 apply plugin: "java-library"
 apply plugin: "org.grails.grails-plugin"
 apply plugin: "org.grails.grails-gsp"
-apply plugin: 'maven-publish'
+
+apply plugin: 'java'
+compileJava.options.release = 17
 
 version "0.1-SNAPSHOT"
 group "org.grails.plugins"
 
-dependencyManagement {
-    imports {
-        mavenBom "org.grails:grails-bom:$grailsVersion"
-    }
-    applyMavenExclusions false
-}
-
 dependencies {
+    implementation platform(project(':grails-bom'))
+
     api 'org.springframework.boot:spring-boot-starter-logging'
     api "org.springframework.boot:spring-boot-starter-actuator"
     api "org.springframework.boot:spring-boot-autoconfigure"
@@ -37,3 +34,5 @@ dependencies {
 
     console "org.grails:grails-console"
 }
+
+apply from: rootProject.file('gradle/functional-test-project.gradle')
