--- a/grails-test-examples/plugins/loadsecond/build.gradle
+++ b/grails-test-examples/plugins/loadsecond/build.gradle
@@ -3,35 +3,32 @@ buildscript {
         maven { url "https://repo.grails.org/grails/core" }
     }
     dependencies {
-        classpath "org.grails:grails-gradle-plugin:$grailsGradlePluginVersion"
+        classpath "org.grails:grails-gradle-plugin:${project['grails-gradle-plugin.version']}"
     }
 }
-
-apply plugin: "java-library"
-apply plugin: "org.grails.grails-plugin"
-apply plugin: "org.grails.grails-gsp"
-apply plugin: 'maven-publish'
-// Used for publishing to central repository, remove if not needed
 
 version "0.1-SNAPSHOT"
 group "org.grails.plugins"
 
-dependencyManagement {
-    imports {
-        mavenBom "org.grails:grails-bom:$grailsVersion"
-    }
-    applyMavenExclusions false
-}
+apply plugin: "java-library"
+apply plugin: "org.grails.grails-plugin"
+apply plugin: "org.grails.grails-gsp"
+
+apply plugin: 'java'
+compileJava.options.release = 17
 
 dependencies {
-  api 'org.springframework.boot:spring-boot-starter-logging'
-  api "org.springframework.boot:spring-boot-starter-actuator"
-  api "org.springframework.boot:spring-boot-autoconfigure"
-  api "org.springframework.boot:spring-boot-starter-tomcat"
+    implementation platform(project(':grails-bom'))
+    api 'org.springframework.boot:spring-boot-starter-logging'
+    api "org.springframework.boot:spring-boot-starter-actuator"
+    api "org.springframework.boot:spring-boot-autoconfigure"
+    api "org.springframework.boot:spring-boot-starter-tomcat"
 
-  api "org.grails:grails-web-boot"
-  api "org.grails:grails-dependencies"
-  api "jakarta.servlet:jakarta.servlet-api"
+    api "org.grails:grails-web-boot"
+    api "org.grails:grails-dependencies"
+    api "jakarta.servlet:jakarta.servlet-api"
 
-  console "org.grails:grails-console"
+    console "org.grails:grails-console"
 }
+
+apply from: rootProject.file('gradle/functional-test-project.gradle')
