--- a/grails-test-examples/hyphenated/build.gradle
+++ b/grails-test-examples/hyphenated/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'java'
 compileJava.options.release = 17
 
 dependencies {
-    implementation platform(project(':grails-bom'))
+    implementation platform("org.grails:grails-bom:${project['grailsVersion']}")
 
     implementation "org.springframework.boot:spring-boot-starter-logging"
     implementation "org.springframework.boot:spring-boot-starter-actuator"
@@ -42,6 +42,4 @@ dependencies {
 
     integrationTestImplementation testFixtures("org.grails.plugins:geb")
 }
-
-apply from: rootProject.file('gradle/functional-test-project.gradle')
 
