--- a/grails-test-examples/app1/build.gradle
+++ b/grails-test-examples/app1/build.gradle
@@ -26,7 +26,7 @@ apply plugin: 'java'
 compileJava.options.release = 17
 
 dependencies {
-    implementation platform(project(':grails-bom'))
+    implementation platform("org.grails:grails-bom:${project['grailsVersion']}")
 
     implementation "org.springframework.boot:spring-boot-starter-logging"
     implementation "org.springframework.boot:spring-boot-starter-actuator"
@@ -51,9 +51,9 @@ dependencies {
     testImplementation "io.micronaut:micronaut-http-client:$micronautVersion"
     testImplementation "io.micronaut.serde:micronaut-serde-jackson:$micronautSerdeJacksonVersion"
 
-    implementation project(':grails-test-examples-plugins-loadfirst')
-    implementation project(':grails-test-examples-plugins-loadsecond')
-    implementation project(':grails-test-examples-plugins-loadafter')
+    implementation project(':plugins-loadfirst')
+    implementation project(':plugins-loadsecond')
+    implementation project(':plugins-loadafter')
 
     integrationTestImplementation testFixtures("org.grails.plugins:geb")
 }
@@ -72,4 +72,3 @@ test {
 //compileGroovy.groovyOptions.fork = true
 //compileGroovy.groovyOptions.forkOptions.jvmArgs = ['-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005']
 
-apply from: rootProject.file('gradle/functional-test-project.gradle')
