--- a/grails-test-examples/app3/build.gradle
+++ b/grails-test-examples/app3/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'java'
 compileJava.options.release = 17
 
 dependencies {
-    implementation platform(project(':grails-bom'))
+    implementation platform("org.grails:grails-bom:${project['grailsVersion']}")
 
     implementation "org.springframework.boot:spring-boot-starter-logging"
     implementation "org.springframework.boot:spring-boot-starter-actuator"
@@ -42,8 +42,7 @@ dependencies {
 
 grails {
     plugins {
-        implementation project(':grails-test-examples-plugins-loadafter')
+        implementation project(':plugins-loadafter')
     }
 }
 
-apply from: rootProject.file('gradle/functional-test-project.gradle')
