--- a/grails-test-examples/plugins/issue-11767-plugin/build.gradle
+++ b/grails-test-examples/plugins/issue-11767-plugin/build.gradle
@@ -17,11 +17,9 @@ apply plugin: 'java'
 compileJava.options.release = 17
 
 dependencies {
-    implementation platform(project(':grails-bom'))
+    implementation platform("org.grails:grails-bom:${project['grailsVersion']}")
 
     annotationProcessor 'io.micronaut:micronaut-inject-java'
     implementation 'org.grails:grails-core'
     compileOnly 'io.micronaut:micronaut-inject-groovy'
 }
-
-apply from: rootProject.file('gradle/functional-test-project.gradle')
