--- a/grails-test-examples/plugins/loadafter/build.gradle
+++ b/grails-test-examples/plugins/loadafter/build.gradle
@@ -20,7 +20,7 @@ apply plugin: 'java'
 compileJava.options.release = 17
 
 dependencies {
-    implementation platform(project(':grails-bom'))
+    implementation platform("org.grails:grails-bom:${project['grailsVersion']}")
 
     api 'org.springframework.boot:spring-boot-starter-logging'
     api "org.springframework.boot:spring-boot-starter-actuator"
@@ -35,5 +35,3 @@ dependencies {
 
     console "org.grails:grails-console"
 }
-
-apply from: rootProject.file('gradle/functional-test-project.gradle')
