Revert "Investigated project substitution to isolate tests"
This reverts commit 7eb2f661b45680a19dbcb4fb92eab4db128eeddf.

--- a/grails-test-examples/app3/build.gradle
+++ b/grails-test-examples/app3/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'java'
 compileJava.options.release = 17
 
 dependencies {
-    implementation platform("org.grails:grails-bom:${project['grailsVersion']}")
+    implementation platform(project(':grails-bom'))
 
     implementation "org.springframework.boot:spring-boot-starter-logging"
     implementation "org.springframework.boot:spring-boot-starter-actuator"
@@ -42,7 +42,8 @@ dependencies {
 
 grails {
     plugins {
-        implementation project(':plugins-loadafter')
+        implementation project(':grails-test-examples-plugins-loadafter')
     }
 }
 
+apply from: rootProject.file('gradle/functional-test-project.gradle')
