--- a/grails-test-examples/demo33/build.gradle
+++ b/grails-test-examples/demo33/build.gradle
@@ -75,4 +75,6 @@ tasks.withType(Jar).configureEach {
     duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
 
+apply from: rootProject.file('gradle/functional-test-project.gradle')
+
 compileTestGroovy.dependsOn(compileGsonViews)
