--- a/grails-test-examples/async-events-pubsub-demo/build.gradle
+++ b/grails-test-examples/async-events-pubsub-demo/build.gradle
@@ -25,7 +25,7 @@ apply plugin: 'java'
 compileJava.options.release = 17
 
 dependencies {
-    implementation platform("org.grails:grails-bom:${project['grailsVersion']}")
+    implementation platform(project(':grails-bom'))
 
     implementation "org.grails.plugins:async"
     implementation "org.grails.plugins:events"
@@ -60,3 +60,5 @@ dependencies {
 bootRun {
     mainClass = 'pubsub.demo.Application'
 }
+
+apply from: rootProject.file('gradle/functional-test-project.gradle')
