--- a/grails-test-examples/issue-11102/build.gradle
+++ b/grails-test-examples/issue-11102/build.gradle
@@ -25,7 +25,7 @@ assets {
 }
 
 dependencies {
-    implementation platform("org.grails:grails-bom:${project['grailsVersion']}")
+    implementation platform(project(':grails-bom'))
 
     implementation "org.springframework.boot:spring-boot-starter-logging"
     implementation "org.springframework.boot:spring-boot-autoconfigure"
@@ -66,3 +66,4 @@ bootRun {
     systemProperty springProfilesActive, System.getProperty(springProfilesActive)
 }
 
+apply from: rootProject.file('gradle/functional-test-project.gradle')
