--- a/grails-test-examples/issue-11767/build.gradle
+++ b/grails-test-examples/issue-11767/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'java'
 compileJava.options.release = 17
 
 dependencies {
-    implementation platform("org.grails:grails-bom:${project['grailsVersion']}")
+    implementation platform(project(':grails-bom'))
 
     implementation project(':issue-11767-plugin')
 
@@ -39,3 +39,5 @@ dependencies {
 application {
     mainClass = 'issue11767.Application'
 }
+
+apply from: rootProject.file('gradle/functional-test-project.gradle')
