--- a/gradle/functional-test-project.gradle
+++ b/gradle/functional-test-project.gradle
@@ -1,6 +1,14 @@
+ext {
+    isFunctionalTestProject = true
+}
+
 tasks.withType(Test).configureEach {
     onlyIf {
-        !project.hasProperty('skipFunctionalTests')
+        if(project.hasProperty('skipFunctionalTests')) {
+            return false
+        }
+
+        true
     }
     useJUnitPlatform()
     testLogging {
