--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ if (jointBuildGroovyJarProperty) {
         throw new GradleException("The groovy.jar system property points to ${jointBuildGroovyJar.absolutePath} which does not exist.")
     }
 } else {
-    groovyDependency = dependencies.create("org.apache.groovy:groovy:${project['groovy.version']}")
+    groovyDependency = dependencies.create("org.apache.groovy:groovy:${groovyVersion}")
 }
 
 if (isReleaseVersion) {
@@ -95,7 +95,7 @@ allprojects {
         configurations.configureEach {
             resolutionStrategy.eachDependency { DependencyResolveDetails details ->
                 if (details.requested.group == 'org.codehaus.groovy' && details.requested.name != 'groovy-bom') {
-                    details.useTarget(group: 'org.apache.groovy', name: details.requested.name, version: project.findProperty('groovy.version'))
+                    details.useTarget(group: 'org.apache.groovy', name: details.requested.name, version: groovyVersion)
                 }
             }
         }
@@ -117,7 +117,7 @@ allprojects {
                 eachDependency { DependencyResolveDetails details ->
                     //specifying a fixed version for all libraries with 'org.gradle' group
                     if (details.requested.group == 'org.apache.groovy') {
-                        details.useVersion(project['groovy.version'])
+                        details.useVersion(groovyVersion)
                     }
                     if (details.requested.group == "org.spockframework") {
                         details.useVersion(project['spock.version'])
