--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,7 @@ gradleNexusPublishPluginVersion=2.0.0
 gradleExtraConfigurationsPluginVersion=10.0.1
 gradleLicensePluginVersion=0.16.1
 gradleToolingApiVersion=8.12
+groovyVersion=4.0.24
 joptSimpleVersion=5.0.4
 plexusComponentApiVersion=1.0-alpha-33
 plexusSecDispatcherVersion=1.4
